Remove ECoS Locomotives from Bean Tables
Since an ECoS locomotive address is not a named bean, do not show the ECoS locomotive address in the NamedBean tables, but in its own window.

--- a/java/src/jmri/jmrix/ecos/EcosBundle_nl.properties
+++ b/java/src/jmri/jmrix/ecos/EcosBundle_nl.properties
@@ -53,8 +53,7 @@ DecoderSelectionXTitle      = Selectie voor Loc {0}
 AddRosterEntryQuestion      = Loc uit JMRI toevoegen?
 
 # swing items
-EcosLocoTableTitle          = ECoS Loc-tabel
-XLocoTableTitle             = {0} Loc-tabel
+EcosLocoTableTitle          = {0} Loc-tabel
 EcosLocoTitle               = ECoS Loc
 UpdateToolTip               = Verzoek status update aan ECoS
 RosterPrefLabel             = Conflicten oplossen tussen JMRI en ECoS:
