translations for display + new le menus move cardinal directions form ops to nbb to share

--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_fr.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_fr.properties
@@ -199,10 +199,9 @@ NotConnected      = <Non connect\u00e9>
 EnterRotation     = Entrer angle de rotation (degr\u00e9s Horaires)
 Block1ID          = Canton 1
 Block2ID          = Canton 2
-Block3ID          = cCnton 3
+Block3ID          = Canton 3
 Block4ID          = Canton 4
 UseSizeAsDefault  = Utiliser la Taille par d\u00e9faut
-Remove            = Retirer
 SetSignals        = Ensemble de Feux de Signalisation ...
 SetSensors        = Ensemble capteurs ...
 SetSignalMasts    = Ensemble M\u00e2ts de Signalisation ...
