--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_it.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_it.properties
@@ -207,7 +207,7 @@ LevelCrossing = Incrocio
 LayoutSingleSlip = Singolo Inglese (Slip)
 LayoutDoubleSlip = Doppio Inglese (Slip)
 Anchor = Punto di ancoraggio
-EdgeNotLinked = Non Coonnesso
+EdgeNotLinked=Non Connesso
 EdgeEditLink = Modifica Connessione
 BlockDivider = Divisore blocco
 Mainline = Linea principale
