--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_nl.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_nl.properties
@@ -47,7 +47,7 @@ DoubleCrossoverToolTip = Selecteer om een Kruiswissel op het paneel te plaatsen 
 #RHCrossover = RH Xover etc > moved to DisplayBundle
 RHCrossoverToolTip = Selecteer om een Rechtse Overloopwissel op het paneel te plaatsen met de volgende Shift-klik.
 LHCrossoverToolTip = Selecteer om een Linkse Overloopwissel op het paneel te plaatsen met de volgende Shift-klik.
-Connections = Verbindingen
+Connections = Aansluitingen
 Dashed = Gestippeld
 DashedCheckBoxTip = Spoor tekenstijl - aan = streeplijn, uit = getrokken.
 MainlineBox = Hoofdspoor
@@ -281,7 +281,7 @@ TabIcon = Symbolen
 HighlightSelectedBlock = Laat geselecteerde Blok oplichten
 FontSize = Tekengrootte
 
-DropDownListsDisplayOrder = Volgorde in keuzelijsten...
+DropDownListsDisplayOrder = Volgorde in keuzelijsten
 DropDownListsDisplayOrderDisplayName = Naam (Gebruiker, anders Systeem)
 DropDownListsDisplayOrderUserNameSystemName = Gebruikersnaam gevolgd door Systeemnaam
 DropDownListsDisplayOrderSystemNameUserName = Systeemnaam gevolgd door Gebruikersnaam
@@ -305,21 +305,19 @@ TooltipAlways = Altijd
 TooltipEdit = Alleen in Bewerkingsmodus
 TooltipNotEdit = Behalve in Bewerkingsmodus
 TurnoutCirclesOn = Toon Wissel-cirkels
-#ShowBlockNames = Show Block Names in Edit Mode
 AntialiasingOn = Schakel antialiasing in (gladdere lijnen)
 NewTitle = Nieuwe Paneeltitel
 EditTitle = Bewerk Paneeltitel
 
 SetGridSizes = Stel Rasters in
-PrimaryGridSize = Afmetingen Hoofdraster
+PrimaryGridSize = Afmetingen Hoofdraster:
 PrimaryGridSizeHint = Voer de tussenafstand in van het primaire raster
-SecondaryGridSize = Afmeting Tussenraster
+SecondaryGridSize = Afmeting Tussenraster:
 SecondaryGridSizeHint = Voer de tussenafstand in van het secundaire raster
 
 SetGridSizesMessageTitle = Rastermaat
 
 AddBackground = Voeg achtergrondafbeelding toe
-#SetBackgroundColor = Set Background Color
 AddTurntable = Voeg Draaischijf toe
 AddReporter = Voeg Reporter-etiket toe
 EnterTitle = Voeg nieuwe titel toe
@@ -330,7 +328,6 @@ TrackColorSubMenu = Standaardkleuren Spoorsegmenten
 DefaultTrackColor = Stel standaardkleur spoor in
 DefaultOccupiedTrackColor = Stel standaardkleur in voor bezet spoor
 DefaultAlternativeTrackColor = Stel standaardkleur in voor alternatieve betekenis
-#DefaultTextColor = Set Default Text Color
 TurnoutOptions = Opties voor Wissels
 TurnoutCircleColor = Stel kleur Wissel-cirkels in
 TurnoutCircleSize = Stel grootte Wissel-cirkels in
@@ -357,7 +354,7 @@ SignalMastsAtLevelXing = Plaats Seinmasten bij Kruising
 SignalMastsAtLayoutSlip = Plaats Seinmasten bij Engels Wissel
 TurnoutAName = Wissel A (voorste puntstuk)
 TurnoutBName = Wissel B (2e puntstuk)
-SignalsTurnoutNameHint = Kies/Vul de Systeem- of Gebruikersnaam in van de Wissel om Seinen bij te zetten.
+SignalsTurnoutNameHint=Kies/Vul de Systeem- of Gebruikersnaam in van de Wissel om Seinen bij te plaatsen.
 SignalsBlockNameHint = Kies/Vul de Systeem- of Gebruikersnaam in van het Blok om Seinen bij te zetten.
 GetSaved = Haal op van schijf
 GetSavedHint = Klik om de eerder opgeslagen Seinschilden op te halen.
@@ -374,9 +371,6 @@ OrBoth = (of beide Wissels
 Throat = Puntstukzijde
 ThroatToThroat = Puntstuk-aan-Puntstuk
 ThreeWay = Drieweg
-East = Oost
-West = West
-Signal = Seinschild
 Tracks) = sporen)
 EnterXOverTurnout = Kies naam van Overloop-Wissel
 XContinuing = {0}hoek - Doorgaand
@@ -581,3 +575,46 @@ VetoWillBeRemovedFromBlock = Het wordt verwijderd uit het Baanplan-blok
 
 BeanNameLayoutBlock = Baanplan-blok
 Line=Lijn
+
+#check menu items
+CheckMenuTitle = Controleer
+ReCheckMenuTitle = Controleer opnieuw
+CheckMenuToolTip = Gebruik dit menu om laneel-elementen te controleren
+CheckInProgressMenuItemTitle = Controle bezig...
+CheckInProgressMenuItemToolTip = Controle is bezig... (even wachten)
+CheckNoResultsMenuItemTitle = Geen resultaten
+CheckNoResultsMenuItemToolTip = Controle voltooid: geen resultaten om te vermelden
+
+CheckUnConnectedTracksMenuTitle = Niet-verbonden sporen
+CheckUnConnectedTracksMenuToolTip = Kies om te controleren dat sporen geen niet-aangesloten uiteinden hebben.
+CheckUnBlockedTracksMenuTitle = Spoorsegmenten zonder Blok
+CheckUnBlockedTracksMenuToolTip = Kies om te controleren dat aan alle sporen een blok is toegewezen.
+CheckNonContiguousBlocksMenuTitle = Aaneengesoten blokken
+CheckNonContiguousBlocksMenuToolTip = Kies om te controleren dat alle blokken aaneengesoten zijn.
+SplitTrackSegment = Splits Spoorsegment
+MergeAdjacentTracks = Spoorsegmenten samenvoegen
+CanNotMergeAtBlockBoundary = Kan niet samenvoegen op blokgrens
+HighlightSelectedBlockTitle = Accentueren
+EntryExitTitle = Entry Exit
+HighlightSelectedBlockToolTip = Laat het geselecteerde blok op het paneel oplichten
+BlockSensorName = Naam Blokterugmelder
+AssignBlockToSelectionTitle = Wijs Blok aan selectie toe
+AssignBlockToSelectionToolTip = Koppel het Blok uit de gereedschapsbalk aan alle op het paneel geselecteerde spoordelen.
+ScaleTrackDiagramToolTip = Verschaal/verschuif alle spoordelen op het paneel.
+TranslateSelectionToolTip = Klik om de huidige selectie te verschuiven.
+UndoTranslateSelectionToolTip = Maak verschuiving van selectie ongedaan.
+LinkedToX = Aangesloten op {0}
+GridMenuTitle = Raster-opties
+AddMenuTitle = Voeg toe
+TrackMenuTitle = Spoor-opties
+ResetTurnoutSizeToolTip = Stel standaard wisselafmeting in op oorspronkelijke waarde
+SkipInternalTurnoutToolTip = (De)aktiveer Overslaan interne wissels zonder sein
+SignalsAtTurnoutToolTip = Stel Seinschilden rond wissel in
+SignalsAtBoundaryToolTip = Stel Seinschilden op Blokgrens in
+SignalsAtXoverTurnoutToolTip = Stel Seinschilden rond Kruiswissel in
+SignalsAtLevelXingToolTip = Stel Seinschilden rond Kruising in
+SignalsAtTToTTurnoutToolTip = Stel Seinschilden rond punt-aan-punt Wissels in
+SignalsAtSlipToolTip = Stel Seinschilden rond Engels Wissel in
+SignalsAt3WayTurnoutToolTip = Stel Seinschilden rond Driewegwissel in
+EntryExitToolTip = Configuratie van een Entry-Exit onderdeel
+SensorsTurnoutNameHint = Kies/Vul de Systeem- of Gebruikersnaam in van de Wissel om Terugmelders bij te plaatsen.
