--- a/java/src/jmri/NamedBeanBundle_fr.properties
+++ b/java/src/jmri/NamedBeanBundle_fr.properties
@@ -106,6 +106,12 @@ SignalAspect_Speed_Stop = 0
 SignalAspect_Speed_Approach = 30
 SignalAspect_Speed_Clear = 60
 
+# Cardinal directions
+East                = Est
+West                = Ouest
+North               = Nord
+South               = Sud
+
 # Used in the Editors for a Slip Icon Edit
 LowerWestToUpperEast = Inf\u00e9rieur Ouest vers Sup\u00e9rieure Est
 UpperWestToLowerEast = Sup\u00e9rieur Ouest vers Inf\u00e9rieur Est
