clean up no longer used fr, da, de, ca LE keys

--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_ca.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_ca.properties
@@ -96,7 +96,6 @@ SecondName = Nom adicional
 TurnoutNameToolTip = Entra el nom d'una agulla f\u00edsica.
 StateToolTip = Selecciona l'estat d'una agulla que es correspongui amb l'itinerari.
 ContinuingState = Estat d'agulla per continuar amb l'itinerari
-Block=Bloc
 BlockID = Bloc: Nom
 BlockIDToolTip = Entra el nom d'un Bloc per una nova agulla, un creuament a nivell, o un segment de via.
 OccupancySensorToolTip = Entra el nom del sensor d'ocupaci\u00f3 per a aquest bloc; cap entrada significa cap canvi.
@@ -273,14 +272,16 @@ TurnoutCirclesOn = Show Turnout Circles
 AntialiasingOn = Enable antialiasing (Smoother lines)
 NewTitle = New Title
 EditTitle = Edit Title
-EditGridSize = Grid Size
-NewGridSize = New Grid Size
+SetGridSizes = Set Grid Sizes
+PrimaryGridSize = Primary Grid Size:
+PrimaryGridSizeHint = Enter width for primary grid size
+SecondaryGridSize = Secondary Grid Size:
+SecondaryGridSizeHint = Enter width for secondary grid size
 AddBackground = Add Background Image
 #SetBackgroundColor = Set Background Color
 AddTurntable = Add Turntable
 AddReporter = Add Reporter Label
 EnterTitle = Enter New Title
-EditGridsizeMessageTitle = Grid Size
 EditTitleMessageTitle = Edit Layout Name
 SetTrackWidth = Set Track Line Width
 SetLocation = Save Location and Size
@@ -422,10 +423,6 @@ Warn2 = Bean Settings needed for Block operation could not be created. Check tha
 # rename panel error messages
 CanNotRename = Can not rename panel with the same name as an existing panel
 PanelExist = Panel name already exists!
-
-# grid resize error mesages
-CannotEditGridSize = Cannot set Grid Size to new value
-GridSizeInvalid = Grid Size must be between 5 and 100
 
 SensorsBlockNameHint = Enter name of one Block where Sensors are needed at block boundary.
 
