--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_da.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_da.properties
@@ -83,14 +83,11 @@ ChangeIconToolTip = Click to change icons used to represent Sensors, Signal Head
 SensorIcon = Sensor Ikon
 ChangeIconNotApplied = This only works when a Sensor, Signal Head or\nLabel is selected to the right of this button.
 SensorButtonToolTip = Select to add a Sensor icon when next clicking with shift down.
-SensorBoxToolTip = Select to add a Sensor icon when next clicking with shift down.
 SignalButtonToolTip = Select to add a Signal Head icon when next clicking with shift down.
 SensorIconToolTip = Enter name of Sensor represented by a new Sensor icon.
 SignalIconToolTip = Enter name of Signal Head represented by a new signal head icon.
 SignalIcon = Signal Hoved Ikon
-SignalBoxToolTip = Select to add a Signal Head icon when next clicking with shift down.
 SignalMastIcon = Signal Mast Ikon
-SignalMastBoxToolTip = Select to add a Signal Mast icon when next clicking with shift down.
 IconLabel = Ikon Etiket
 IconLabelToolTip = Select to add a general purpose icon when next clicking with shift down.
 Slip = Slip
@@ -102,7 +99,6 @@ SecondName = Supplerende Navn
 TurnoutNameToolTip = Enter name of physical turnout.
 StateToolTip = Select turnout state corresponding to continuing route.
 ContinuingState = Continuing Route Turnout State
-Block = Blok
 BlockID = Blok: Navn
 BlockIDToolTip = Enter name of Block for new turnout, level crossing, or track segment.
 OccupancySensorToolTip = Enter name of occupancy sensor for this block; no entry means don't change.
@@ -272,7 +268,8 @@ TabTrack = Spor
 TabLabel = Etiketter
 TabIcon = Ikoner
 
-HighlightSelectedBlock = Fremh\u00e6v Valgte Blok
+HighlightSelectedBlockTitle = Fremh\u00e6v
+HighlightSelectedBlockToolTip =Fremh\u00e6v Valgte Blok
 FontSize = Skrift St\u00f8rrelse
 
 DropDownListsDisplayOrder = Rullelistens Visnings Orden...
@@ -303,14 +300,18 @@ TurnoutCirclesOn = Vis Sporskifte Cirkler
 AntialiasingOn = Aktiver Kantudj\u00e6vning (Bl\u00f8dere linijer)
 NewTitle = Ny Titel
 EditTitle = Rediger Title
-EditGridSize = Gitter St\u00f8relse
-NewGridSize = Ny Gitter St\u00f8relse
+
+SetGridSizes = Gitter St\u00f8relse
+PrimaryGridSize = Primary Grid Size:
+PrimaryGridSizeHint = Enter width for primary grid size
+SecondaryGridSize = Secondary Grid Size:
+SecondaryGridSizeHint = Enter width for secondary grid size
+SetGridSizesMessageTitle = Gitter St\u00f8relse
+
 AddBackground = Tilf\u00f8j Baggrunds Billede
-#SetBackgroundColor = S\u00e6t Baggrunds Farve
 AddTurntable = Tilf\u00f8j Drejeskive
 AddReporter = Tilf\u00f8j Reporter Etiket
 EnterTitle = Indtast Ny Titel
-EditGridsizeMessageTitle = Gitter St\u00f8relse
 EditTitleMessageTitle = Rediger Layout Navn
 SetTrackWidth = S\u00e6t Spor Linje Brede
 SetLocation = Gem Lokation og St\u00f8rrelse
@@ -455,10 +456,6 @@ Warn2 = Bean Settings needed for Block operation could not be created. Check tha
 # rename panel error messages
 CanNotRename = Kan ikke omd\u00f8be panel med samme navn som det eksisterende panel
 PanelExist = Panel navnet eksiterer allerede!
-
-# grid resize error mesages
-CannotEditGridSize =  Gitter St\u00f8relsen kan ikke s\u00e6tte til den nye v\u00e6rdi
-GridSizeInvalid = Gitter St\u00f8relsen skal v\u00e6re mellem 5 og 100
 
 SensorsBlockNameHint = Indtast navnet p\u00e5 en blok, hvor der er behov for sensorer ved blok gr\u00e6nsen.
 
