--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_de.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_de.properties
@@ -144,14 +144,11 @@ TurnoutCirclesOn = Zeige Weichenkreise
 AntialiasingOn = Activiere Kantengl\u00e4ttung f\u00fcr Linien
 NewTitle = Neue \u00dcberschrift
 EditTitle = Bearbeite \u00dcberschrift
-EditGridSize = Gitterabstand
-NewGridSize = Neuer Gitterabstand
+
 AddBackground = F\u00fcge Hindergrundbild hinzu
-#SetBackgroundColor = W\u00e4hle Hintergrundfarbe
 AddTurntable = F\u00fcge Drehscheibesinnbild hinzu
 AddReporter = F\u00fcge Melder hinzu
 EnterTitle = Gebe neue \u00dcberschrift ein
-EditGridsizeMessageTitle = Gitterabstand
 EditTitleMessageTitle = Bearbeite Anlagenamen
 SetTrackWidth = Setze Gleisliniendicke
 SetLocation = Speichere Ort und Gr\u00f6\u00dfe
@@ -344,10 +341,9 @@ Warn1 = Warnung - Anbindungen f\u00fcr Block "{0}" in Gleisbilder "{1}" und "{2}
 ChangeSignalIconHint = Klicke um andere Sinnbilder f\u00fcr Signalschirme zu nutzen (w\u00e4hle Bilder welche nach Links sehen)
 ChangeSignalIcon = \u00c4ndere Signalschirmsinnbild
 ChangeSensorIcon = \u00c4ndere Detektorsinnbild
-SetLogicHint = Selektiere um Einfacher Signallogic f\u00fcr dieses Signalschirm ein zu geben.
+SetLogicHint=Selektiere um Einfacher Signallogik f\u00fcr dieses Signalschirm ein zu geben.
 West/NorthBound = West-/Nordw\u00e4rts fahrend
 East/SouthBound = Ost-/S\u00fcdw\u00e4rts fahrend
-Block = Block
 BlockID = Block: Name
 OccupiedSense = Besetzt wenn
 DoubleCrossoverAbbreviation = Dopp.Gleiswechsel
@@ -374,8 +370,6 @@ SignalHeadEastNameHint = Gebe System- oder Nutzernamen ein f\u00fcr den Signalsc
 SignalHeadWestNameHint = Gebe System- oder Nutzernamen ein f\u00fcr den Signalschirm welche Westw\u00e4rts/Nordw\u00e4rts fahrende Z\u00fcge ansehen.
 EntryError = Eingabefehler
 CanNotRename = Kann Gleistafel nicht umbennnen weil diesen Namen schon genutzt wird.
-CannotEditGridSize = Kann Gitter nicht einstellen auf neuen Wert.
-GridSizeInvalid = Gitterma\u00df zwischen 5 und 100 eingeben
 ViewBlockRouting = Zeige Blockroutierung
 ShowConstruct = Zeige Hilfslinien
 HideConstruct = Verbirge Hilfslinien
@@ -454,3 +448,10 @@ EntryExitToolTip = Kunfiguriere einen Entry-Exit Kombination
 SensorsTurnoutNameHint = Gebe System- oder Nutzernamen der Weiche ein wo Detektoren erstellt werden sollen.
 ThroatToThroat = Gespiegelt
 ThreeWay = Dreiweg
+SetAllLogic=Erstelle ESL
+SetAllLogicHint=W\u00e4hle um Einfacher Signallogik f\u00fcr alle Signalschilder zu erstellen
+SignalsError1=Fehler - Keinen Namen f\u00fcr Weiche eingegeben. Bitte Namen eingeben.
+SignalsError2=Fehler - Keinen Weiche definiert f\u00fcr "{0}". F\u00fcge zuerst eine Weiche an die Tabelle und diesen Tafel hinzu.
+SignalsError3=Fehler - Weiche "{0}" ist nicht auf dieser Tafel plaziert.\nBitte den Namen einer Weiche auf dieser Tafel nutzen.
+SignalsError4=Fehler - Signalschild "{0}" nicht angetroffen.\nBitte Namen korrigieren oder Schild an der Tafel hinzuf\u00fcgen.
+SignalsError20=Fehler - Keine Blockgrenzen bei dieser Weiche definiert.\nDeshalb kann keinen Signalmast aufgestellt werden.
