--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_fr.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_fr.properties
@@ -72,13 +72,10 @@ MultiSensorToolTip      = S\u00e9lectionner pour ajouter un MultiCapteur lors du
 ChangeIcons             = Changement d\u00b4Ic\u00f4nes
 ChangeIconToolTip       = Cliquez pour changer les Ic\u00f4nes utilis\u00e9es pour repr\u00e9senter Capteurs, Feu de Signalisation ou une \u00e9tiquette (si elle est justifi\u00e9e \u00e0 droite).
 SensorIcon              = Ic\u00f4ne Capteur 
-SensorBoxToolTip        = S\u00e9lectionnez cette option pour ajouter une ic\u00f4ne de Capteur lors du prochain clic avec Shift-Bas.
 SensorIconToolTip       = Entrez le nom du Capteur repr\u00e9sent\u00e9 par une nouvelle ic\u00f4ne de Capteur.
 SignalIconToolTip       = Entrez le nom de la T\u00eate de Signal repr\u00e9sent\u00e9e par une nouvelle ic\u00f4ne Feu de Signalisation.
 SignalIcon              = Ic\u00f4ne Feu de Signalisation. 
-SignalBoxToolTip        = S\u00e9lectionnez cette option pour ajouter une ic\u00f4ne Feu de Signalisation lors du prochain clic avec Shift-Bas.
 SignalMastIcon          = Ic\u00f4ne M\u00e2t de Signal.
-SignalMastBoxToolTip    = S\u00e9lectionner pour ajouter une Ic\u00f4ne M\u00e2t de Signalisation lors du prochain clic avec Shift-Bas.
 IconLabel               = Ic\u00f4ne \u00c9tiquette
 IconLabelToolTip        = S\u00e9lectionnez cette option pour ajouter une ic\u00f4ne \u00e0 usage g\u00e9n\u00e9ral lors du prochain clic avec Shift-Bas.
 Slip                    = Travers\u00e9e Jonction
@@ -90,7 +87,6 @@ SecondName              = Nom suppl\u00e9mentaires
 TurnoutNameToolTip      = Entrez le nom d\u00b4aiguillage physique.
 StateToolTip            = S\u00e9lectionnez l\u00b4\u00e9tat de Aiguillage correspondant \u00e0 la voie droite.
 ContinuingState         = Aiguillage voie droite
-Block                   = Canton
 BlockID                 = Canton: Nom
 BlockIDToolTip          = Entrez le nom du Canton pour le nouvel aiguillage, croisement, ou un segment de voie.
 OccupancySensorToolTip  = Entrez le nom du Capteur d\u00b4occupation de ce Canton; aucune entr\u00e9e signifie pas de changement d\u00b4\u00e9tat.
@@ -197,19 +193,10 @@ NoBlockX          = Canton {0} Non D\u00e9fini
 NoTurnout         = Aucun Aiguillage de D\u00e9fini
 NotConnected      = <Non connect\u00e9>
 EnterRotation     = Entrer angle de rotation (degr\u00e9s Horaires)
-Block1ID          = Canton 1
-Block2ID          = Canton 2
-Block3ID          = Canton 3
-Block4ID          = Canton 4
 UseSizeAsDefault  = Utiliser la Taille par d\u00e9faut
 SetSignals        = Ensemble de Feux de Signalisation ...
 SetSensors        = Ensemble capteurs ...
 SetSignalMasts    = Ensemble M\u00e2ts de Signalisation ...
-RHTurnout         = Aig. D
-LHTurnout         = Aig. G
-XOverTurnout      = Double Bretelle
-RHXOverTurnout    = Bretelle Droite
-LHXOverTurnout    = Bretelle Gauche
 WYETurnout        = Aig. Y
 LevelCrossing     = Croisement
 LayoutSingleSlip  = TJS
@@ -247,11 +234,10 @@ AlignX           = Aligner Verticalement
 AlignY           = Aligner Horizontalement
 
 # Option des \u00e9l\u00e9ments de menu
-Options                 = Options
 OptionsMnemonic         = O
 EditMode                = Mode Modifications
-EditModeMnemonic = E
-EditModeAccelerator = E
+EditModeMnemonic        = E
+EditModeAccelerator     = E
 AllowRepositioning      = Permettre un repositionnement
 AllowLayoutControl      = Autoriser la Commande du R\u00e9seau
 AllowTurnoutAnimation   = Autoriser l\u00b4Animation Aiguillage
@@ -265,11 +251,6 @@ SnapToGridOnAdd         = Aligner sur la Grille lors de l\u00b4Ajout
 SnapToGridOnAddAccelerator = A
 SnapToGridOnMove        = Aligner sur la Grille lors du D\u00e9placement
 SnapToGridOnMoveAccelerator = M
-ScrollBarsSubMenu       = Afficher les barres de d\u00e9filement
-ScrollNone              = Pas de barres de d\u00e9filement
-ScrollBoth              = Les deux barres de d\u00e9filement
-ScrollHorizontal        = Horizontale seulement
-ScrollVertical          = Verticale seulement
 TooltipSubMenu          = Afficher l\u00b4Ic\u00f4ne infobulles
 TooltipNone             = Jamais
 TooltipAlways           = Toujours
@@ -280,15 +261,19 @@ TurnoutCirclesOn        = Afficher les Cercles des Aiguillages
 AntialiasingOn          = Activer l\u00b4anticr\u00e9nelage (lignes lisses)
 NewTitle                = Nouveau titre
 EditTitle               = Modifier Titre
-EditGridSize            = Taille de Grille
-NewGridSize             = Nouvelle Taille de Grille
+
+SetGridSizes            = D\u00e9finir Taille de Grille
+PrimaryGridSize         = Taille de Grille Primaire:
+PrimaryGridSizeHint     = Entrez la distance Taille de Grille Primaire
+SecondaryGridSize       = Taille de Grille Secondaire:
+SecondaryGridSizeHint   = Entrez la distance Taille de Grille Secondaire
+SetGridSizesMessageTitle = Taille de Grille
+
 AddBackground           = Ajouter Image Arri\u00e8re-Plan
-#SetBackgroundColor      = D\u00e9finir Couleur de fond
 AddTurntable            = Ajouter Pont Tournant
 AddReporter             = Ajouter \u00c9tiquette Rapport
 EnterTitle              = Entrer Nouveau titre
-EditGridsizeMessageTitle = Taille de Grille
-EditTitleMessageTitle   = Modiifer Nom du R\u00e9seau
+EditTitleMessageTitle   = Modifer Nom du R\u00e9seau
 SetTrackWidth           = D\u00e9finir Largeur Voie
 SetLocation             = Sauvegarder Emplacement et Taille
 DefaultTrackColor       = D\u00e9finir Couleur de Voie par D\u00e9faut
@@ -321,11 +306,7 @@ SignalMastsAtLevelXing  = D\u00e9finir M\u00e2ts de signalisation du Croisement
 SignalMastsAtLayoutSlip = D\u00e9finir M\u00e2ts de signalisation d\u00b4une Travers\u00e9e Jonction
 TurnoutAName            = Nom Aiguillage A (la plus proche de la pointe)
 TurnoutBName            = Nom Aiguillage B (le plus \u00e9loign\u00e9 de la pointe)
-BlockAtA                = Canton 1
-BlockAtC                = Canton 2
 SignalsTurnoutNameHint  = Entrez le nom (syst\u00e8me ou utilisateur) de l\u00b4aiguillage o\u00f9 les signaux sont n\u00e9cessaires.
-SignalsBlocksNameHint   = Entrez le nom d\u00b4un canton o\u00f9 les signaux sont n\u00e9cessaires \u00e0 la limite canton.
-SignalHeads             = Feu de Signalisation
 GetSaved                = \u00eatre Sauv\u00e9
 GetSavedHint            = Cliquez pour r\u00e9cup\u00e9rer les Feux de Signalisation pr\u00e9c\u00e9demment stock\u00e9es.
 ThroatContinuing        = Pointe - Droit
@@ -341,32 +322,20 @@ ProtectsTurnout         = Prot\u00e8ge l\u00b4Aiguillage
 OrBoth                  = (ou les deux Aiguillage
 Throat                  = Pointes
 Tracks)                 = Voies)
-EnterXOverTurnout = Entrez le nom de la Bretelle Double:
-AContinuing     = Angle A - Droit
-ADiverging      = Angle A - D\u00e9vi\u00e9
-BContinuing     = Angle B - Droit
-BDiverging      = Angle B - D\u00e9vi\u00e9
-CContinuing     = Angle C - Droit
-CDiverging      = Angle C - D\u00e9vi\u00e9
-DContinuing     = Angle D - Droit
-DDiverging      = Angle D - D\u00e9vi\u00e9
-ATrack          = A Connectant le Point
-BTrack          = B Connectant le Point
-CTrack          = C Connectant le Point
-DTrack          = D Connectant le Point
+EnterXOverTurnout       = Entrez le nom de la Bretelle Double:
+
 PlaceHead       = Ajouter Ic\u00f4ne Feu de Signalisation sur le panneau
 PlaceHeadHint   = Cocher pour placer l\u00b4Ic\u00f4ne du Feu de Signalisation ci dessus sur le panneau pr\u00e8s de l\u00b4aiguillage .
 AnchorPlaceHeadHint = Cocher pour placer l\u00b4Ic\u00f4ne du Feu de Signalisation ci dessus sur le panneau pr\u00e8s du point d\u00b4ancrage.
 SetLogic        = D\u00e9finir la Logique
-East/South      = En Direction de l\u00b4Est (ou Sud)
-West/North      = En Direction de l\u00b4Ouest (ou du Nord)
+East/SouthBound = En Direction de l\u00b4Est (ou Sud)
+West/NorthBound = En Direction de l\u00b4Ouest (ou du Nord)
 SetLogicHint    = Cocher pour d\u00e9finir la logique simple signal pour le Feu de Signalisation ci-dessus.
 ChangeSignalIcon        = Changement d\u00b4Ic\u00f4ne Feu de Signalisation
 ChangeSignalIconHint    = Cliquez pour modifier les ic\u00f4nes utilis\u00e9es pour repr\u00e9senter les Feux de Signalisation. (Utilisez les ic\u00f4nes dirig\u00e9es vers la gauche .)
 SignalHeadNameHint      = Entrez le nom (syst\u00e8me ou utilisateur) du Feu de Signalisation situ\u00e9e ici.
 SignalHeadEastNameHint  = Entrez le nom (syst\u00e8me ou utilisateur) du Feu de Signalisation pour les trains \u00e0 destination de la droite (est) ou du bas  (sud).
 SignalHeadWestNameHint  = Entrez le nom (syst\u00e8me ou utilisateur) du Feu de Signalisation pour les trains \u00e0 destination de la gauche (ouest) ou du (nord).
-SignalDoneHint          = Cliquez sur Termin\u00e9 pour effectuer les t\u00e2ches demand\u00e9es ci-dessus et de fermer ce dialogue.
 SignalsError1  = Erreur - Aucun nom d\u00b4aiguillage n\u00b4a \u00e9t\u00e9 entr\u00e9. S\u00b4il vous pla\u00eet entrer un nom d\u00b4aiguillage ou annuler.
 SignalsError2  = Erreur - Pas aiguillage  d\u00e9fini pour "{0}". S\u00b4il vous pla\u00eet entrer\nun nom d\u00b4aiguillage dans le tableau aiguillage et sur le panneau.
 SignalsError3  = Erreur - L\u00b4aiguillage "{0}" n\u00b4est pas dessin\u00e9 sur le panneau\nVeuillez entrer le nom d\u00b4un aiguillage dessin\u00e9..
@@ -442,22 +411,12 @@ CanNotRename    = Impossible de renommer le panneau avec le m\u00eame nom qu\u00
 PanelExist      = Nom du groupe existe d\u00e9j\u00e0!
 
 SensorsBlockNameHint = Entrez le nom d\u00b4un canton o\u00f9 des Capteurs sont n\u00e9cessaires \u00e0 la limite du canton.
-Sensors = Capteurs
-Sensor = Capteur
 
 Boundary         = Fronti\u00e8re avec
 ViewBlockRouting = Voir le Routage de Canton
 
 ChangeSensorIcon        = Changement Ic\u00f4ne Capteur
 ChangeSensorIconHint    = Cliquez pour modifier les ic\u00f4nes utilis\u00e9es pour repr\u00e9senter les Capteurs.
-#SensorEastNameHint      = Entrez le nom (syst\u00e8me ou utilisateur) du Capteur pour la limite droite pour les trains allant vers l\u00b4(est) ou vers le bas (sud) .
-#SensorWestNameHint      = Entrez le nom (syst\u00e8me ou utilisateur) du Capteur pour la limite gauche pour les trains allant vers l\u00b4(ouest) ou vers le haut (nord).
-
-#PlaceSensor             = Ajouter Capteur Ic\u00f4ne de groupe
-#PlaceSensorLeftToolTip  = Placer le Capteur sur le c\u00f4t\u00e9 gauche de la voie, comme si vous \u00e9tiez face \u00e0 lui
-#PlaceSensorRightToolTip = Placer le Capteur sur le c\u00f4t\u00e9 droit de la voie comme si vous \u00e9tiez face \u00e0 lui
-#PlaceSensorHint         = Cocher pour placer l\u00b4ic\u00f4ne pour le Capteur dessus sur le panneau pr\u00e8s de l\u00b4aiguillage.
-#AnchorPlaceSensorHint   = Cocher pour placer ic\u00f4ne pour le Capteur dessus sur le panneau pr\u00e8s du point d\u00b4ancrage.
 
 SensorsError1  = Erreur - Aucun nom d\u00b4aiguillage a \u00e9t\u00e9 entr\u00e9. S\u00b4il vous pla\u00eet entrer un nom d\u00b4aiguillage ou Annuler.
 SensorsError2  = Erreur - Pas aiguillage  d\u00e9fini pour "{0}". S\u00b4il vous pla\u00eet entrer\nun nom d\u00b4aiguillage dans le Tableau Aiguillage et sur le panneau.
@@ -471,17 +430,7 @@ SensorsError13 = erreur - Ne peut pas attribuer le capteur "{0}" \u00e0 cette li
 
 SignalMastsBlockNameHint = Entrez le nom d\u00b4un canton o\u00f9 les m\u00e2ts de signalisation sont n\u00e9cessaires \u00e0 la limite canton.
 
-#ChangeSignalMastIcon = Changement Ic\u00f4ne M\u00e2t Signal
-#ChangeSignalMastIconHint = Cliquez pour modifier les ic\u00f4nes utilis\u00e9es pour repr\u00e9senter les m\u00e2ts de signalisation. (Utilisez les ic\u00f4nes dirig\u00e9es vers la gauche .)
 SignalMastsTurnoutNameHint = Entrez le nom (syst\u00e8me ou utilisateur) du m\u00e2t de signalisation
-#SignalMastEastNameHint = Entrez le nom (syst\u00e8me ou utilisateur) du m\u00e2t de signalisation \u00e0 la limite droite pour les trains allant vers la droite (est) ou vers le bas (sud).
-#SignalMastWestNameHint = Entrez le nom (syst\u00e8me ou utilisateur) du m\u00e2t de signalisation \u00e0 la limite droite pour les trains allant vers la gauche (vers l\u00b4ouest) ou vers le haut (nord).
-
-PlaceSignalMast = Ajouter Ic\u00f4ne de groupe M\u00e2ts de Signalisation
-PlaceMastHint = Cochez pour placer l\u00b4ic\u00f4ne pour m\u00e2t de signal ci-dessus sur le panneau pr\u00e8s de l\u00b4aiguillage.
-PlaceSignalMastLeftToolTip = Placez le M\u00e2t de Signalisation sur le c\u00f4t\u00e9 gauche de la voie, comme si vous \u00e9tiez face \u00e0 lui
-PlaceSignalMastRightToolTip = Placez le M\u00e2t de Signalisation sur le c\u00f4t\u00e9 droit de la voie comme si vous \u00e9tiez face\u00e0 lui
-AnchorPlaceSignalMastHint = Cochez placer l\u00b4ic\u00f4ne pour M\u00e2t de Signalisation ci-dessus sur le panneau pr\u00e8s du point d\u00b4ancrage.
 
 SignalMastsError4 = Erreur - M\u00e2t de Signalisation "{0}" n\u00b4existe pas. S\u00b4il vous pla\u00eet corrigez lenom\nou entrez ce M\u00e2tSignal dans le tableau M\u00e2tSignal, et essayez \u00e0 nouveau.
 SignalMastsError5 = Erreur - Le nom du M\u00e2t de Signalisation n\u00b4a pas \u00e9t\u00e9 entr\u00e9. S\u00b4il vous pla\u00eet entrer\nun nom de M\u00e2t de Signalisation pour les positions requise ou annuler.
@@ -499,7 +448,6 @@ DoNotPlace      = Ne pas placer sur panneau
 PlaceLeftToolTip = Placez {0} sur le c\u00f4t\u00e9 gauche de la voie comme si vous \u00e9tiez face \u00e0 elle
 PlaceRightToolTip = Placez {0} sur le c\u00f4t\u00e9 droit de la voie comme si vous \u00e9tiez face \u00e0 elle
 PlaceItem = Ajouter {0} Ic\u00f4ne pour le Panneau
-#NameHint = Entrez le nom (syst\u00e8me ou utilisateur) de {0} situ\u00e9 ici.
 PlaceItemToolTip = Cocher pour placer l\u00b4ic\u00f4ne au-dessus de {0} sur le panneau pr\u00e8s du point d\u00b4ancrage.
 BoundaryOf = Limite
 BlockBoundary = Limite de  Canton
