--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_nl.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_nl.properties
@@ -278,7 +278,8 @@ TabTrack = Spoor
 TabLabel = Etiketten
 TabIcon = Symbolen
 
-HighlightSelectedBlock = Laat geselecteerde Blok oplichten
+HighlightSelectedBlockTitle = Accentueer
+HighlightSelectedBlockToolTip = Laat het geselecteerde Blok op het paneel oplichten
 FontSize = Tekengrootte
 
 DropDownListsDisplayOrder = Volgorde in keuzelijsten
@@ -594,9 +595,7 @@ CheckNonContiguousBlocksMenuToolTip = Kies om te controleren dat alle blokken aa
 SplitTrackSegment = Splits Spoorsegment
 MergeAdjacentTracks = Spoorsegmenten samenvoegen
 CanNotMergeAtBlockBoundary = Kan niet samenvoegen op blokgrens
-HighlightSelectedBlockTitle = Accentueren
 EntryExitTitle = Entry Exit
-HighlightSelectedBlockToolTip = Laat het geselecteerde blok op het paneel oplichten
 BlockSensorName = Naam Blokterugmelder
 AssignBlockToSelectionTitle = Wijs Blok aan selectie toe
 AssignBlockToSelectionToolTip = Koppel het Blok uit de gereedschapsbalk aan alle op het paneel geselecteerde spoordelen.
@@ -618,3 +617,4 @@ SignalsAtSlipToolTip = Stel Seinschilden rond Engels Wissel in
 SignalsAt3WayTurnoutToolTip = Stel Seinschilden rond Driewegwissel in
 EntryExitToolTip = Configuratie van een Entry-Exit onderdeel
 SensorsTurnoutNameHint = Kies/Vul de Systeem- of Gebruikersnaam in van de Wissel om Terugmelders bij te plaatsen.
+SignalsError20=Fout - Er zijn geen blokgrenzen bij dit Wissel.\nDaarom kan er geen Seinmast geplaatst worden.
