--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_ca.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_ca.properties
@@ -393,17 +393,17 @@ Error5 = Error - You are currently editing this "{0}".\nOnly one editor may be o
 Error6 = Error - Sensor "{0}" is already assigned as the occupancy sensor \n of Block "{1}". Please check which is correct before continuing.
 Error7 = Error - Cannot assign occupancy sensor because there\nis no sensor defined for "{0}".\nPlease enter sensor via the Sensor Table and try again.
 Error8 = Error - Cannot assign turnout because there\nis no turnout defined for "{0}".\nPlease enter turnout via the Turnout Table and try again.
-Error9 = Error - Cannot create a signal head icon because there is no signal head\ndefined for - "{0}". Please enter the name of a Signal Head in\nthe Signal Table and try again.
+Error9 = Error - Cannot create a signal head icon because there is no signal head\ndefined for "{0}". Please enter the name of a Signal Head in\nthe Signal Table and try again.
 Error10 = Error - Cannot create a sensor icon because no name is entered in the\nSensor Icon field. Please enter the name of a sensor and try again.
 Error11 = Error - Cannot create a memory label because no name is entered in the\nMemory Label field. Please enter the name of a memory variable and try again.
 Error12 = Error - Cannot translate selection because no selection has been made.\nPlease select by dragging with the mouse and try again.
 Error13 = Error - Cannot delete a ray track because none are within 30 degrees of the\nentered angle. Please try again with a more precise angle entry.
 Error14 = Error - Required throat-to-throat arrangement not found. Please set up as two turnouts connected throat-to-throat by a single track segment.
-Error15 = Error - Cannot proceed because there is no turnout is assigned to one or more of the turnout diagrams. Please assign turnout(s) and try again.
-Error16 = Error - Cannot attach Memory to Block because no memory is defined for "{0}. Please enter a Memory defined in the Memory Table and try again.
+Error15 = Error - Cannot proceed because no turnout is assigned to one or more of the turnout diagrams.\nPlease assign turnout(s) and try again.
+Error16 = Error - Cannot attach Memory to Block because no memory is defined for "{0}".\nPlease enter a Memory defined in the Memory Table and try again.
 Error17 = Error - Reporter manager not available. Cannot add Reporter Icon.
-Error18 = Error - Could not provide Reporter {0}. Cannot add Reporter Icon.
-Error19 = Error - Missing Name for Sensor {0}. Please fill in all fields.
+Error18 = Error - Could not provide Reporter "{0}". Cannot add Reporter Icon.
+Error19 = Error - Missing Name for Sensor "{0}". Please fill in all fields.
 
 # question messages
 Question1 = Are you sure you want to remove this turnout from the panel, along with any connected Track Segments?
@@ -423,6 +423,10 @@ Warn2 = Bean Settings needed for Block operation could not be created. Check tha
 # rename panel error messages
 CanNotRename = Can not rename panel with the same name as an existing panel
 PanelExist = Panel name already exists!
+
+# grid resize error mesages
+CannotEditGridSize = Cannot set Grid Size to new value
+GridSizesInvalid = Grid Size must be between 5 and 100
 
 SensorsBlockNameHint = Enter name of one Block where Sensors are needed at block boundary.
 
@@ -450,7 +454,7 @@ SensorsError13 = Error - Cannot assign sensor "{0}" to this block boundary\nbeca
 SignalMastsBlockNameHint = Enter name of one block where signal masts are needed at block boundary.
 #ChangeSignalMastIcon = Change SignalMast Icon
 #ChangeSignalMastIconHint = Click to change icons used to represent signal masts (Use left-facing icons.)
-SignalMastsTurnoutNameHint =  Enter name (system or user) of signal mast
+SignalMastsTurnoutNameHint = Enter name (system or user) of signal mast
 #SignalMastEastNameHint = Enter name (system or user) of signal mast for right-bound (east) or down-bound (south) trains.
 #SignalMastWestNameHint = Enter name (system or user) of signal mast for left-bound (west) or up-bound (north) trains.
 
