--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_fr.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_fr.properties
@@ -45,7 +45,7 @@ Dashed                  = Pointill\u00e9e
 DashedCheckBoxTip       = D\u00e9finit le style du segment voie - coch\u00e9e pour pointill\u00e9s, d\u00e9coch\u00e9e continu.
 MainlineBox             = Voie Principale
 MainlineCheckBoxTip     = D\u00e9finit le style du segment voie - coch\u00e9e voie principale, d\u00e9coch\u00e9e la case pour voie \u00e9vitement.
-Solid                  = Continu
+Solid                   = Continu
 Style                   = Style
 LevelCrossingToolTip    = S\u00e9lectionner pour ajouter un croisement lors du prochain clic avec Shift-Bas.
 SingleSlipToolTip       = S\u00e9lectionnez cette option pour ajouter une Travers\u00e9e Jonction Simple lors du prochain clic avec Shift-Bas.
@@ -245,7 +245,7 @@ ShowEditHelp            = Montrer les Barre d\u00b4Aide en mode Modificaton
 ShowEditGrid            = Afficher la Grille en Mode Modification
 ShowEditGridAccelerator = G
 AutoAssignBlock         = Attribuer Automatiquement des Cantons \u00e0 la Voie
-HideTrackConLines = Cacher les Lignes de Construction de la Voie
+HideTrackConLines       = Cacher les Lignes de Construction de la Voie
 UseDirectTurnoutControl = Utiliser la Commande Directe d'Aiguillage
 SnapToGridOnAdd         = Aligner sur la Grille lors de l\u00b4Ajout
 SnapToGridOnAddAccelerator = A
@@ -364,43 +364,43 @@ InfoMessage6 = Impossible de mettre en place une logique car les cantons n\u00b4
 InfoMessage7 = Impossible de configurer logique car toutes les connexions\nn\u00b4ont pas \u00e9t\u00e9 d\u00e9finies autour de cet \u00e9l\u00e9ment.
 InfoMessage8 = D\u00e9sol\u00e9, le jeu de signaux pour la bretelle\nne travaille pas avec d\u00b4autres types d\u00b4aiguillages.
 InfoMessage9 = D\u00e9sol\u00e9, l\u00b4\u00c9diteur de R\u00e9seau ne prend pas en charge la mise en place\nde la logique pour une seule T\u00eate \u00e0 la pointe d\u00b4un aiguillage 3 voies.
-SignalsWarn1 = Avertissement -La logique a \u00e9t\u00e9 mise en place au Feu de Signalisation "{0}", mais aucun Capteurs\n de protection du trafic se coisant au croisement n\u00b4ont \u00e9t\u00e9 trouv\u00e9s.
+SignalsWarn1 = Avertissement - La logique a \u00e9t\u00e9 mise en place au Feu de Signalisation "{0}", mais aucun Capteurs\n de protection du trafic se coisant au croisement n\u00b4ont \u00e9t\u00e9 trouv\u00e9s.
 SignalsWarn2 = Avertissement - Selon vos instructions, l\u00b4absense de signaux \u00e0l\u00b4aiguillage "{0}"\na \u00e9t\u00e9 ignor\u00e9 lors de la mise en place de la logique pour le Feu de Signalisation "{1}".
 
 # Messages d\u00b4erreur
 EntryError  = Erreur dans l\u00b4entr\u00e9e
 ErrorEnterLocoID = Erreur d\u00b4entr\u00e9e - Identit\u00e9 Loco requise.
 TryAgain    = Veuillez r\u00e9entrer ou Annuler.
-Error1      = Erreur - Impossible de cr\u00e9er ou modifier un canton sans nom\nVeuillez entrer un nom de canton et r\u00e9essayez..
-Error2      = Erreur - La valeur entr\u00e9e "{0}" n\u00b4est pas dans la plage autoris\u00e9e.\nVeuillez entrer un num\u00e9ro de 1 \u00e0 10..
+Error1      = Erreur - Impossible de cr\u00e9er ou modifier un canton sans nom.\nVeuillez entrer un nom de canton et r\u00e9essayez.
+Error2      = Erreur - La valeur entr\u00e9e "{0}" n\u00b4est pas dans la plage autoris\u00e9e.\nVeuillez entrer un num\u00e9ro de 1 \u00e0 10.
 Error2a     = Erreur - La valeur entr\u00e9e "{0}" n\u00b4est pas dans la plage autoris\u00e9e.
 Error3      = Erreur dans la saisie de rotation:
 Error4      = Erreur - L\u00b4iguillage physique "{0}" est d\u00e9j\u00e0 li\u00e9 \u00e0 un Aiguillage diff\u00e9rent du Panneau.\nVeuillez entrer un autre nom d\u00b4aiguillage et r\u00e9essayez..
 Error5      = Erreur - Vous \u00eates en train d\u00b4\u00e9diter cette "{0}"\nSeul un \u00e9diteur peut d\u00b4ouvrir un m\u00eame temps\nVeuillez annuler ou terminer cette \u00e9dition et essayez \u00e0 nouveau...
 Error6      = Erreur - Le capteur {0} est d\u00e9j\u00e0 affect\u00e9 comme Capteur d\u00b4occupation\n du canton ("{1}"). S\u00b4il vous pla\u00eet v\u00e9rifier ce qui est correct avant de poursuivre.
-Error7      = Erreur - Ne peut pas attribuer le Capteur d\u00b4occupation parce qu\u00b4il\n\u00b4y a pas de capteur d\u00e9fini."{0}"\nEntrez  un Capteur via le Tableau de Capteur et r\u00e9essayez..
+Error7      = Erreur - Ne peut pas attribuer le Capteur d\u00b4occupation parce qu\u00b4il\nn\u00b4y a pas de capteur d\u00e9fini avec "{0}".\nEntrez  un Capteur via le Tableau de Capteur et r\u00e9essayez..
 Error8      = Erreur - Ne peut pas attribuer l\u00b4aiguillage parce qu\u00b4il\nest pas l\u00b4aiguillage d\u00e9fini pour "{0}".\nEntrez un aiguillage via le Tableau d\u00b4Aiguillage et r\u00e9essayez..
-Error9      = Erreur - Impossible de cr\u00e9er une ic\u00f4ne de Feu de Signalisation, car il n\u00b4ya pas de Feu de Signalisation\nd\u00e9fini pour - "{0}". S\u00b4il vous pla\u00eet entrez le nom d\u00b4un TFeu de Signalisation dans\nle Tableau Signalisation et r\u00e9essayez.
+Error9      = Erreur - Impossible de cr\u00e9er une ic\u00f4ne de Feu de Signalisation, car il n\u00b4ya pas de Feu de Signalisation\nd\u00e9fini pour "{0}". S\u00b4il vous pla\u00eet entrez le nom d\u00b4un TFeu de Signalisation dans\nle Tableau Signalisation et r\u00e9essayez.
 Error10     = Erreur - Impossible de cr\u00e9er une ic\u00f4ne Capteur car aucun nom n\u00b4est entr\u00e9 dans le champ de l\u00b4Ic\u00f4ne Capteur.\nS\u00b4il vous pla\u00eet entrer le nom d\u00b4un capteur et r\u00e9essayez.
 Error11     = Erreur - Impossible de cr\u00e9er un label m\u00e9moire, car aucun nom n\u00b4est entr\u00e9 dans le champ de l\u00b4\u00c9tiquette M\u00e9moire.\ S\u00b4il vous pla\u00eet entrer le nom d\u00b4une variable m\u00e9moire et essayez \u00e0 nouveau.
 Error12     = Erreur - Impossible de translater la s\u00e9lection car aucune s\u00e9lection n\u00b4a \u00e9t\u00e9 faite.\nS\u00e9lectionnez en faisant glisser avec la souris et essayez \u00e0 nouveau..
 Error13     = Erreur - Impossible de supprimer une voie rayonnante car aucune n\u00b4est dans l\u00b4angle de 30 degr\u00e9s enter\u00e9.\nS\u00b4il vous pla\u00eet essayer de nouveau avec un angle plus pr\u00e9cis.
 Error14     = Erreur - Disposition pointe-\u00e0-pointe introuvable. S\u00b4il vous pla\u00eet mettre en place deux aiguillages connect\u00e9s pointe-\u00e0-pointe reli\u00e9s par un segment de voie unique.
-Error15     = Erreur - Impossible de continuer car il n\u00b4y a pas aiguillage affect\u00e9 \u00e0 un ou plusieurs des aiguillages du sch\u00e9mas. S\u00b4il vous pla\u00eet affecter les aiguillage (s) et r\u00e9essayez.
-Error16     = Erreur - Impossible d\u00b4associer la M\u00e9moire au Canton, car aucune m\u00e9moire n\u00b4est d\u00e9finie pour "{0}. S\u00b4il vous pla\u00eet entrer une m\u00e9moire d\u00e9finie dans le Tableau M\u00e9moire et essayez \u00e0 nouveau..
+Error15     = Erreur - Impossible de continuer car il n\u00b4y a pas aiguillage affect\u00e9 \u00e0 un ou plusieurs des aiguillages du sch\u00e9mas.\nS\u00b4il vous pla\u00eet affecter les aiguillage (s) et r\u00e9essayez.
+Error16     = Erreur - Impossible d\u00b4associer la M\u00e9moire au Canton, car aucune m\u00e9moire n\u00b4est d\u00e9finie pour "{0}".\nS\u00b4il vous pla\u00eet entrer une m\u00e9moire d\u00e9finie dans le Tableau M\u00e9moire et essayez \u00e0 nouveau..
 Error17     = Erreur - Le gestionnaire de Jounaux n\u00b4est pas disponible. Impossible d\u00b4ajouter Ic\u00f4ne Rapport.
-Error18     = Erreur - Impossible de fournir le Rapport {0}. Impossible d\u00b4ajouter Ic\u00f4ne Rapport.
+Error18     = Erreur - Impossible de fournir le Rapport "{0}". Impossible d\u00b4ajouter Ic\u00f4ne Rapport.
 
 # Messages d\u00b4interrogation
 Question1   = \u00cates-vous s\u00fbr de vouloir supprimer cet aiguillage sur le panneau, ainsi que tous les segments de voie connect\u00e9s?
-Question1r = \u00cates-vous s\u00fbr de vouloir supprimer cet aiguillage sur le panneau,?
-Question2   =  \u00cates-vous s\u00fbr de vouloir supprimer ce point de l\u00b4\u00e9cran, ainsi que tous les segments de voie connect\u00e9s?
+Question1r  = \u00cates-vous s\u00fbr de vouloir supprimer cet aiguillage sur le panneau ?
+Question2   = \u00cates-vous s\u00fbr de vouloir supprimer ce point de l\u00b4\u00e9cran, ainsi que tous les segments de voie connect\u00e9s?
 Question3   = \u00cates-vous s\u00fbr de vouloir supprimer ce croisement sur le panneau, ainsi que tous les segments de voie connect\u00e9s?
-Question3r = \u00cates-vous s\u00fbr de vouloir supprimer ce croisement sur le panneau?
+Question3r  = \u00cates-vous s\u00fbr de vouloir supprimer ce croisement sur le panneau?
 Question4   = \u00cates-vous s\u00fbr de vouloir supprimer cette plaque tournante sur le panneau, ainsi que tous les segments de voie connect\u00e9s?
-Question4r = \u00cates-vous s\u00fbr de vouloir supprimer cette plaque tournante sur le panneau?
+Question4r  = \u00cates-vous s\u00fbr de vouloir supprimer cette plaque tournante sur le panneau?
 Question5   = \u00cates-vous s\u00fbr de vouloir supprimer cette TJ sur le panneau, ainsi que tous les segments de voie connect\u00e9s?
-Question5r = \u00cates-vous s\u00fbr de vouloir supprimer cette TJ sur le panneau?
+Question5r  = \u00cates-vous s\u00fbr de vouloir supprimer cette TJ sur le panneau?
 Question6   = \u00cates-vous s\u00fbr de vouloir supprimer tous les \u00e9l\u00e9ments s\u00e9lectionn\u00e9s, ainsi que tous les segments de voie connect\u00e9s?
 Question7   = \u00cates-vous s\u00fbr de vouloir supprimer cette voie rayonnante de la plaque tournante, ainsi que tous les segments de voie connect\u00e9s?
 Warn1       = Avertissement - Les connectivit\u00e9s pour le Canton "{0}" dans les panneaux "{1}" et "{2}" ne sont pas compatibles.
@@ -431,15 +431,13 @@ SensorsError13 = erreur - Ne peut pas attribuer le capteur "{0}" \u00e0 cette li
 SignalMastsBlockNameHint = Entrez le nom d\u00b4un canton o\u00f9 les m\u00e2ts de signalisation sont n\u00e9cessaires \u00e0 la limite canton.
 
 SignalMastsTurnoutNameHint = Entrez le nom (syst\u00e8me ou utilisateur) du m\u00e2t de signalisation
-
-SignalMastsError4 = Erreur - M\u00e2t de Signalisation "{0}" n\u00b4existe pas. S\u00b4il vous pla\u00eet corrigez lenom\nou entrez ce M\u00e2tSignal dans le tableau M\u00e2tSignal, et essayez \u00e0 nouveau.
+SignalMastsError4 = Erreur - M\u00e2t de Signalisation "{0}" n\u00b4existe pas. S\u00b4il vous pla\u00eet corrigez lenom\nou entrez ce M\u00e2t Signal dans le tableau M\u00e2tSignal, et essayez \u00e0 nouveau.
 SignalMastsError5 = Erreur - Le nom du M\u00e2t de Signalisation n\u00b4a pas \u00e9t\u00e9 entr\u00e9. S\u00b4il vous pla\u00eet entrer\nun nom de M\u00e2t de Signalisation pour les positions requise ou annuler.
 SignalMastsError6 = Erreur - Impossible de placer le M\u00e2t de Signalisation "{0}" sur le panneau\ncar il est d\u00e9j\u00e0 sur le panneau.
 SignalMastsError12 = Erreur - Pas de M\u00e2ts de Signalisation entr\u00e9s\nEntrez les m\u00e2ts de signalisation ou annulez.
 SignalMastsError13 = Erreur - ne peut pas attribuer le M\u00e2t de Signalisation "{0}" \u00e0 cette limite de canton\ncar il est d\u00e9j\u00e0 sur le panneau \u00e0 un endroit diff\u00e9rent.
 SignalMastsError14 = Erreur - ne peut pas attribuer le m\u00eame M\u00e2t de Signalisation dans les deux sens
-
-DuplicatePanel      = Un panneau de l\u00b4\u00e9diteur de r\u00e9seau avec le m\u00eame nom\n"{0}" a d\u00e9j\u00e0 \u00e9t\u00e9 ouvert.\n\u00eates-vous s\u00fbr que vous voulez ouvrir une autre copie?
+DuplicatePanel = Un panneau de l\u00b4\u00e9diteur de r\u00e9seau avec le m\u00eame nom\n"{0}" a d\u00e9j\u00e0 \u00e9t\u00e9 ouvert.\n\u00cates-vous s\u00fbr que vous voulez ouvrir une autre copie?
 DuplicatePanelTitle = nom du Panneau Duplicat\u00e9
 
 RightHandSide   = \u00e0 Droite
@@ -494,7 +492,7 @@ VetoSignalHeadAssignedToTurnout = Est assign\u00e9 \u00e0 l'Aiguillage {0}
 VetoSignalHeadAssignedToPoint = Est assign\u00e9 \u00e0 un Canton Fronti\u00e8re
 VetoSignalHeadAssignedToLevelXing = Est assign\u00e9 \u00e0 un Croisement
 VetoSignalHeadAssignedToLayoutSlip = Est assign\u00e9 \u00e0 LayoutSlip {0}
-VetoTurnoutIconFound =Est utilis\u00e9 avec une Ic\u00f4ne Aiguillage.<br>cette r\u00e9f\u00e9rence devra \u00eatre supprim\u00e9e, mais l'ic\u00f4ne restera sur le panneau.
+VetoTurnoutIconFound = Est utilis\u00e9 avec une Ic\u00f4ne Aiguillage.<br>cette r\u00e9f\u00e9rence devra \u00eatre supprim\u00e9e, mais l'ic\u00f4ne restera sur le panneau.
 VetoSlipIconFound = Est utilis\u00e9 avec une Ic\u00f4ne Travers\u00e9e Jonction, cette r\u00e9f\u00e9rence devra \u00eatre supprim\u00e9e, mais l'ic\u00f4ne restera sur le panneau.
 VetoLinkedTurnout = Est un Aiguillage li\u00e9 avec {0} ; la r\u00e9f\u00e9rence devra \u00eatre supprim\u00e9e
 VetoSecondTurnout = Est un aiguillage secondaire appair\u00e9 avec {0} .<br>La r\u00e9f\u00e9rence devra \u00eatre supprim\u00e9e
