add basic simulator function (adapted from EasyDccSim) + tests add check for existing EasyDccSimulator adapter

--- a/java/src/jmri/jmrix/sprog/SprogBundle_nl.properties
+++ b/java/src/jmri/jmrix/sprog/SprogBundle_nl.properties
@@ -10,6 +10,7 @@ GetSprogFirmwareVersion=Lees SPROG firmware versie uit
 SprogXFirmwareUpdate=SPROG{0} firmware bijwerken
 SprogConsoleTitle = SPROG Console
 SprogProgrammerTitle = SPROG Programmeerunit
+SprogSimulatorTitle = SPROG Sim
 SprogBootloaderXTitle=SPROG{0} Bootloader
 SprogVersionTitle = SPROG Versie
 SprogVersionDialogString = SPROG versie: {0}
