Add real replies for Sprog (not yet seen in monitor) Sprog console i18n Javadoc

--- a/java/src/jmri/jmrix/JmrixBundle_de.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_de.properties
@@ -191,6 +191,7 @@ SentTitle               = Gesanden
 ReceivedTitle           = Empfangen
 SendXCommandTitle       = Sende {0}-Befehl
 EnterASCIIToolTip       = Befehl eingeben als ASCII Buchstaben (hex noch nicht unterst\u00fctzt)
+Timeout                 = Zeitfehler
 
 # cmri/rps/maple shared items
 ConfigNodesTitle        = Knotenkonfigurator
