--- a/java/src/jmri/jmrix/sprog/SprogBundle_nl.properties
+++ b/java/src/jmri/jmrix/sprog/SprogBundle_nl.properties
@@ -72,6 +72,7 @@ EnterSPROGCommandTooltip = Voer een SPROG-commando in en klik op [{0}]
 ConfigurationTitle = Configuratie
 CurrentLimitLabel = Max. stroom (mA):
 CurrentLimitFieldTooltip = Voer een nieuwe maximumwaarde in voor de stroom door de SPROG in milliamp\u00e8re (0 - 1000)
+CurrentLimitFieldTooltip2500 = Voer een nieuwe maximumwaarde in voor de stroom door de SPROG in milliamp\u00e8re (0 - 2500)
 ButtonSetZTCMode = ZTC modus
 ButtonSetZTCModeTooltip = Gebruik deze optie om oudere ZTC decoders te programmeren
 ButtonSetBluelineMode = Blueline modus
@@ -81,6 +82,7 @@ ButtonUnlockFirmwareTooltip = Gebruik deze optie ALLEEN als je direct hierna de 
 ButtonApplyTooltip = Bewaar SPROG-configuratie (in de SPROG EEPROM)
 SprogSlotMonitorTitle=SPROG Slots-monitor
 #ApplyConfigurationTitle = Save & Apply Configuration
+ErrorFrameDialogWord = Misvormd antwoord voor modus
 
 #SprogNano items
 SprogNanoCSTitle = SPROG Nano Commandocentrale
