--- a/java/src/jmri/jmrix/JmrixBundle_nl.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_nl.properties
@@ -216,6 +216,7 @@ TooltipReceived         = Aantal ontvangen Packets
 TooltipClearCounters    = Maak Verstuurd/Ontvangen Packets tellers leeg
 SentTitle               = Verstuurd
 ReceivedTitle           = Ontvangen
+Timeout                 = Timeout
 
 # cmri/rps/maple shared items
 LabelPoll               = Verzoek
